# ldpc

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  decoder.cpp  encoder.cpp  ldpc.cpp  plotPaths.m
cmake/: ldpcConfig.cmake
compute_gen/: .gitignore  Makefile  ldpc_compute_generator.cpp
include/ldpc/: decoder.h  ldpc.h
libldpc/: CMakeLists.txt
libldpc/cmake/: FindLibLDPC.cmake  LibLDPCConfig.cmake.in
libldpc/include/ldpc/: decoder.h  encoder.h  ldpc.h
libldpc/src/: decoder.cpp  encoder.cpp  ldpc.cpp
tests/: .gitignore  CMakeLists.txt  Makefile  ber_simulation.cpp  test_benchmark.cpp  test_chain.cpp  test_decoder.cpp  test_encoder.cpp
